--- a/frontend/src/app/chat/chat.component.html
+++ b/frontend/src/app/chat/chat.component.html
@@ -1,20 +1,27 @@
-<div class="chat-container">
-  <div *ngFor="let message of getMessages()" class="message" [ngClass]="{
+<div class="main-container">
+  <div class="chat-container">
+    <div *ngFor="let message of getMessages()" class="message" [ngClass]="{
   'user-message': isUserMessage(message),
   'bot-message': !isUserMessage(message)
   }">
-    <div class="message-content">
-      <p>{{ message.content }}</p>
-      <span class="time-sent">{{ message.time_sent | date:'shortTime' }}</span>
+      <div class="message-content">
+        <p [ngStyle]="{'white-space': 'pre-line'}">
+          {{ message.content }}
+        </p>
+        <span class="time-sent">{{ message.time_sent | date:'shortTime' }}</span>
+      </div>
+    </div>
+
+    <div class="message-input-container">
+      <form (submit)="sendMessage()">
+        <input type="text" [(ngModel)]="newMessageContent" name="messageContent" placeholder="Type your message..."
+               required/>
+        <button type="submit">Send</button>
+      </form>
     </div>
   </div>
 
-  <div class="message-input-container">
-    <form (submit)="sendMessage()">
-      <input type="text" [(ngModel)]="newMessageContent" name="messageContent" placeholder="Type your message..."
-             required/>
-      <button type="submit">Send</button>
-    </form>
-  </div>
+  <app-user></app-user>
 </div>
+
 
