--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+
+<main class="app-content">
+  <router-outlet></router-outlet>
+</main>
+
+<app-footer></app-footer>
