--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,10 +1,12 @@
 <header class="app-header">
   <div class="logo">
-    <img ngSrc="../../assets/favicon.svg" alt="BMW Logo" height="60" width="60">
+    <img src="../../assets/favicon.svg" alt="BMW Logo">
   </div>
   <nav>
     <a href="#" class="nav-link">Home</a>
-    <a href="#" class="nav-link">About</a>
-    <a href="#" class="nav-link">Contact</a>
+    <a href="/chat" class="nav-link">My Chat</a>
+    <a href="/imprint" class="nav-link">About</a>
+    <a href="/doc" class="nav-link">Documentation</a>
+    <a href="http://127.0.0.1:8080/documentation" class="nav-link" target="_blank">API</a>
   </nav>
 </header>
