frontend: user: highlight own username

--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -1,6 +1,7 @@
 <div class="users-container">
   <h3>Currently Logged-in Users</h3>
-  <div *ngFor="let user of loggedInUsers" class="user-list">
+  <div *ngIf="getUserName()" class="user-self"><strong>{{ getUserName() }} (You)</strong></div>
+  <div *ngFor="let user of getUsers()" class="user-list">
     <div class="user-entry">{{ user.name }}</div>
   </div>
 </div>
