frontend: welcome: add sessionstorage

--- a/frontend/src/app/welcome/welcome.component.css
+++ b/frontend/src/app/welcome/welcome.component.css
@@ -1,14 +1,5 @@
-body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-  font-family: 'Roboto', sans-serif;
-}
-
-.welcome-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: calc(100vh - 60px); /* Adjust for header and footer */
+.main-container {
+  height: auto;
 }
 
 mat-card {
