frontend: change global styles and component styles

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,8 +1,9 @@
 .app-content {
-  padding: 80px;
-  padding-bottom: 60px;
+  padding-top: 8vh;
+  padding-bottom: 4vh;
+  padding-right: 2vw;
   background-color: var(--background-color);
   color: var(--text-color);
-  height: 100vh;
+  height: 100%;
   box-sizing: border-box;
 }
