--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -16,75 +16,9 @@
   --button-bg: #007bff;
 }
 
+/* header */
 .app-header {
   height: 3vh;
-}
-
-.main-container {
-  padding: 1vh;
-  height: 90vh;
-}
-
-.app-footer {
-  height: 2vh;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.6;
-  background-color: #121212;
-  color: #ffffff;
-  margin: 0;
-  padding: 0;
-}
-
-/* Container to center content vertically */
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-/* Default button styles */
-button {
-  cursor: pointer;
-  padding: 10px 20px;
-  font-size: 1em;
-  border: none;
-  border-radius: 5px;
-  background-color: #1e88e5;
-  color: #ffffff;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #1565c0;
-}
-
-/* Input styles */
-input {
-  padding: 10px;
-  font-size: 1em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-/* Card styles */
-.mat-card {
-  background-color: #ffffff;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-
-/* Header styles */
-.app-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -116,8 +50,9 @@ input {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* Footer styles */
+/* footer */
 .app-footer {
+  height: 2vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -129,7 +64,67 @@ input {
   width: 100%;
 }
 
+/* basic elements */
+body {
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
+  padding: 10px 20px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: #1e88e5;
+  color: #ffffff;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #1565c0;
+}
+
+input {
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
 /* Utility classes */
+.mat-card {
+  background-color: var(--card-background);
+  color: var(--text-color);
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin-bottom: 20px;
+  width: 50vw;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  padding: 1vh;
+  height: 85vh;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .text-center {
   text-align: center;
 }
