frontend: add background image

--- a/frontend/src/app/documentation/documentation.component.html
+++ b/frontend/src/app/documentation/documentation.component.html
@@ -1,6 +1,7 @@
 <div class="main-container">
-  <div class="mat-card">
-    <app-documentation-viewer></app-documentation-viewer>
+  <div class="background">
+    <div class="mat-card">
+      <app-documentation-viewer></app-documentation-viewer>
+    </div>
   </div>
 </div>
-<!---->
