--- a/frontend/src/app/documentation/documentation.component.css
+++ b/frontend/src/app/documentation/documentation.component.css
@@ -2,3 +2,14 @@
   height: 100%;
 }
 
+.mat-card {
+  opacity: 95%;
+}
+
+.background {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  background: url('../../assets/bmw-dark.jpg') no-repeat center center fixed;
+}
+
