--- a/frontend/src/app/chat/chat.component.css
+++ b/frontend/src/app/chat/chat.component.css
@@ -12,12 +12,13 @@
   width: 50vw;
   margin: 0 auto;
   padding: 10px;
-  border: 1px solid var(--input-border-color); /* Use global input border color */
+  border: 1px solid var(--input-border-color);
   border-radius: 5px;
   background-color: var(--card-background);
-  color: var(--text-color); /* Use global text color */
+  color: var(--text-color);
   overflow-y: auto;
-  height: calc(85% - 60px); /* Adjust to leave space for message input */
+  height: calc(85% - 60px);
+  opacity: 95%;
 }
 
 .message {
@@ -32,14 +33,14 @@
 .user-message {
   align-self: flex-end;
   text-align: right;
-  background-color: var(--message-bg-user); /* Use dark mode user message background color */
-  color: var(--message-text-user); /* Use dark mode user message text color */
+  background-color: var(--message-bg-user);
+  color: var(--message-text-user);
 }
 
 .bot-message {
   align-self: flex-start;
-  background-color: var(--message-bg-bot); /* Use dark mode bot message background color */
-  color: var(--message-text-bot); /* Use dark mode bot message text color */
+  background-color: var(--message-bg-bot);
+  color: var(--message-text-bot);
 }
 
 .message-content {
@@ -56,7 +57,7 @@
 
 .time-sent {
   font-size: 0.8em;
-  color: var(--text-color); /* Use global text color */
+  color: var(--text-color);
 }
 
 .message-input-container {
@@ -68,6 +69,7 @@
   background-color: var(--card-background);
   border: 1px solid var(--input-border-color);
   border-radius: 5px;
+  opacity: 95%;
 }
 
 .message-form {
@@ -84,21 +86,17 @@
 
 .send-button {
   min-width: 100px;
-  background-color: var(--button-bg); /* Use dark mode button background color */
-  color: #fff; /* Use white text color for buttons */
+  background-color: var(--button-bg);
+  color: #fff;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
 }
 
-.send-button:hover {
-  background-color: #0056b3; /* Adjust hover color for better contrast */
-}
-
 .app-user-container {
-  width: 300px;
-  margin-right: 10px;
-  position: absolute;
-  right: 0;
+  max-width: 300px;
+  position: fixed;
+  width: 10vw;
+  right: 10px;
 }
