--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="app-header">
   <div class="logo">
-    <img src="../../assets/favicon.svg" alt="BMW Logo">
+    <a href="#" class="nav-link">
+      <img src="../../assets/favicon.svg" alt="BMW Logo">
+    </a>
   </div>
   <nav>
     <a href="#" class="nav-link">Home</a>
