--- a/frontend/src/app/user/user.component.css
+++ b/frontend/src/app/user/user.component.css
@@ -1,25 +1,21 @@
-.users-container {
-  max-width: 25vw;
-  padding: 10px;
-  border: 1px solid #333;
-  border-radius: 5px;
-  background-color: #1e1e1e;
-  color: #f1f1f1;
+.mat-card {
+  width: 100%;
   overflow-y: auto;
-  height: 75vh; /* Adjust as needed */
+  height: 75vh;
+  padding-right: 0;
 }
 
-.users-container h3 {
+.mat-card h3 {
   margin: 0 0 10px;
 }
 
-.users-container > .user-list {
+.mat-card > .user-list {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.users-container > .user-entry {
+.mat-card > .user-entry {
   margin-bottom: 5px;
   padding: 5px;
   border-bottom: 1px solid #333;
