frontend: add background image source to imprint

--- a/frontend/src/app/imprint/imprint.component.html
+++ b/frontend/src/app/imprint/imprint.component.html
@@ -8,6 +8,7 @@
     <p><strong>Phone:</strong> {{ imprintData.phone }}</p>
     <p><strong>Email: </strong> <a [href]="'mailto:' + imprintData.email">{{ imprintData.email }}</a></p>
     <p><strong>Website: </strong> <a [href]="imprintData.website" target="_blank">{{ imprintData.website }}</a></p>
+    <p><strong>Background image source: </strong> <a [href]="imprintData.backgroundLink" target="_blank">{{ imprintData.backgroundSite }}</a></p>
   </div>
 </div>
 <div class="placeholder"></div>
