--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="app-footer">
-  <p>&copy; 2024 Zormeier Company. All rights reserved.</p>
+  <p>&copy; 2024 Technische Hochschule Deggendorf. All rights reserved.</p>
 </footer>
