frontend: make application available in the local network

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -9,6 +9,6 @@
     <a href="/chat" class="nav-link">My Chat</a>
     <a href="/imprint" class="nav-link">About</a>
     <a href="/doc" class="nav-link">Documentation</a>
-    <a href="http://127.0.0.1:8080/documentation" class="nav-link" target="_blank">API</a>
+    <a href="{{apiHost}}/documentation" class="nav-link" target="_blank">API</a>
   </nav>
 </header>
